syntax = "proto2";
package bsn_define;


